--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ h1{
   color: #CEE6F3;
   text-decoration: none;
   border-radius: 5px;
+  cursor: pointer;
   transition: background-color 0.3s ease;
 }
   
