--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ h1{
   
 .button {
   display: inline-block;
-  padding: 10px 20px;
+  padding: 10px;
   margin-top: 10px;
   margin-bottom: 10px;
   background-color: #6C3428;
